# minion

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  minion-design
.cargo/: config.toml
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
crates/minion-ai/: Cargo.toml
crates/minion-ai/src/: embeddings.rs  lib.rs  ollama.rs  rag.rs
crates/minion-app/: Cargo.toml
crates/minion-app/src/: app.rs  commands.rs  lib.rs
crates/minion-blog/: Cargo.toml
crates/minion-blog/src/: lib.rs  platforms.rs  posts.rs  publishing.rs  seo.rs
crates/minion-core/: Cargo.toml
crates/minion-core/src/: config.rs  error.rs  event.rs  lib.rs  plugin.rs  task.rs
crates/minion-crypto/: Cargo.toml
crates/minion-crypto/src/: error.rs  keys.rs  lib.rs  vault.rs
crates/minion-db/: Cargo.toml
crates/minion-db/src/: lib.rs  migrations.rs
crates/minion-files/: Cargo.toml
crates/minion-files/src/: analytics.rs  duplicates.rs  hash.rs  lib.rs  scanner.rs
crates/minion-finance/: Cargo.toml
crates/minion-finance/src/: accounts.rs  analytics.rs  goals.rs  import.rs  investments.rs  lib.rs  transactions.rs
crates/minion-fitness/: Cargo.toml
crates/minion-fitness/src/: habits.rs  lib.rs  nutrition.rs  tracking.rs  workouts.rs
crates/minion-integration-tests/: Cargo.toml
crates/minion-integration-tests/src/: lib.rs
crates/minion-llm/: Cargo.toml
crates/minion-llm/src/: anthropic.rs  error.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  provider.rs  streaming.rs  types.rs
crates/minion-llm/tests/: streaming_tests.rs
crates/minion-media/: Cargo.toml
crates/minion-media/src/: lib.rs  metadata.rs  thumbnails.rs  video.rs  youtube.rs
crates/minion-plugins/: Cargo.toml
crates/minion-plugins/src/: lib.rs
crates/minion-presentation/: Cargo.toml
crates/minion-presentation/src/: bundle.rs  context.rs  db.rs  lib.rs  migrations.rs  orchestrator.rs  router.rs
crates/minion-presentation/src/agents/: design_critic.rs  mod.rs  research.rs  slide_planner.rs  storyteller.rs  visual.rs
crates/minion-presentation/src/input/: document.rs  git.rs  image.rs  mod.rs  text.rs  url.rs
crates/minion-presentation/src/schema/: mod.rs  quaternion.rs  types.rs  validate.rs
crates/minion-presentation/src/security/: git_sandbox.rs  mod.rs  ssrf_guard.rs
crates/minion-presentation/src/visual/: chart_gen.rs  diagram_gen.rs  mod.rs  svg_sanitizer.rs  svg_templates.rs
crates/minion-presentation/tests/: agent_tests.rs  bundle_tests.rs  input_tests.rs  orchestrator_tests.rs  router_tests.rs  schema_tests.rs  security_tests.rs  visual_tests.rs
crates/minion-rag/: Cargo.toml
crates/minion-rag/src/: chunker.rs  embeddings.rs  error.rs  lib.rs  pipeline.rs  store.rs
crates/minion-reader/: Cargo.toml
crates/minion-reader/src/: annotations.rs  formats.rs  knowledge.rs  lib.rs  library.rs
crates/minion-search/: Cargo.toml
crates/minion-search/src/: lib.rs
docs/: ADDITIONAL_MODULES.md  AI_CONCEPT_PRIMER.md  AI_MODELS.md  API_CONTRACTS.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  BLOG_MODULE_V2.md  BUILD_SYSTEM.md  DATABASE_SCHEMA.md  FEATURE_STATUS.md  HEALTH_MODULE.md  MONETIZATION.md  PERFORMANCE.md  PLUGIN_INTERFACE.md  ROADMAP.md  SECURITY_MODEL.md
docs/superpowers/plans/: 2026-04-18-blog-v3-phase-a.md  2026-04-18-sysmon.md  2026-04-27-blog-v3-phase-c1.md  2026-04-27-health-phase-a-fitness-real-data.md  2026-04-27-health-phase-b-medical-records.md  2026-04-27-health-phase-c-intelligence.md  2026-05-14-presentation-agents-core.md  2026-05-14-presentation-animations.md  2026-05-14-presentation-export.md  2026-05-14-presentation-fixes.md  2026-05-14-presentation-foundation.md  2026-05-14-presentation-frontend.md  2026-05-14-presentation-input.md  2026-05-14-presentation-orchestrator.md  2026-05-14-presentation-router.md  2026-05-14-presentation-slide-editor.md  2026-05-14-presentation-ui-additions.md  2026-05-14-presentation-visual.md  2026-05-17-blog-ai-generate-platform-export.md
docs/superpowers/specs/: 2026-04-18-blog-v3-design.md  2026-04-18-sysmon-design.md  2026-04-27-health-intelligence-design.md  2026-04-28-reader-audit-fixes.md  2026-05-14-presentation-module-design.md  2026-05-17-blog-ai-generate-platform-export.md
scripts/: build.sh  mnk  release.sh  version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blog_assets.rs  blog_export.rs  blog_import.rs  blog_lint.rs  blog_llm.rs  blog_preview.rs  blog_publish.rs  blog_svg.rs  calendar_integration.rs  commands.rs  file_viewer.rs  health_analysis.rs  health_classify.rs  health_commands.rs  health_drive_sync.rs  health_entities.rs  health_extract.rs  health_ingestion.rs  health_intelligence.rs  health_timeline.rs  lib.rs  llm_commands.rs  llm_router.rs  main.rs  presentation_commands.rs  state.rs  sysmon_analysis.rs  sysmon_collect.rs  sysmon_commands.rs  tests.rs
ui/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.tsx  page-flip.d.ts
ui/src/components/: CommandPalette.tsx  Layout.tsx
ui/src/lib/: deck-patch.ts  deck-schema.ts  export-pdf.ts  export-pptx.ts  presentation-animations.ts  presentation-api.ts  themes.ts
ui/src/pages/: Blog.tsx  Calendar.tsx  Dashboard.tsx  Explorer.tsx  Files.tsx  Finance.tsx  Fitness.tsx  Health.tsx  Media.tsx  Presentation.tsx  Reader.tsx  Settings.tsx  Sysmon.tsx
ui/src/pages/blog/: AssetsTab.tsx  ImportTab.tsx  LlmAssistantPanel.tsx  PlatformsTab.tsx  PreviewPane.tsx  PublishTab.tsx
ui/src/pages/health/: AnalysisTab.tsx  CloudBackupTab.tsx  DocumentsTab.tsx  EpisodesTab.tsx  ImportTab.tsx  IntelligenceTab.tsx  ReviewTab.tsx  StructuredRecordsTab.tsx  TimelineTab.tsx
ui/src/pages/presentation/: AgentSidebar.tsx  AnimationPanel.tsx  CreationStudio.tsx  DeckWorkspace.tsx  ExportDialog.tsx  PresentationLibrary.tsx  PresentationPlayer.tsx  SlideEditor.tsx  (+2 more)
ui/src/store/: deck-store.ts
ui/src/styles/: index.css
(+8 files in other folders)
