[package]
name = "minion-tauri"
version = "1.9.1"
edition = "2021"
description = "MINION - Unified Personal Intelligence Platform"
license = "MIT"

[lib]
name = "minion_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Local crates
minion-core = { path = "../crates/minion-core" }
minion-db = { path = "../crates/minion-db" }
minion-crypto = { path = "../crates/minion-crypto" }
minion-files = { path = "../crates/minion-files" }
minion-reader = { path = "../crates/minion-reader" }
minion-finance = { path = "../crates/minion-finance" }
minion-media = { path = "../crates/minion-media" }
minion-blog = { path = "../crates/minion-blog" }
minion-llm = { path = "../crates/minion-llm" }

# SQLite (re-exported for direct use in commands)
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"

# Additional deps
html-escape = "0.2"
epub = "2.1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
urlencoding = "2.1"
base64ct = "=1.6.0"
base64 = "0.22"
sha2 = "0.10"
tempfile = "3.10"
pdf-extract = "0.10.0"

[dev-dependencies]
tempfile = "3.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
