[package]
name = "minion-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION AI layer - Ollama integration, embeddings, RAG"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
