[package]
name = "minion-blog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION Blog AI Engine - multi-platform publishing"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true

minion-db = { path = "../minion-db" }
minion-ai = { path = "../minion-ai" }
