[package]
name = "minion-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION cryptography - encryption, key derivation, secure storage"

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
sha2.workspace = true
blake3.workspace = true
hkdf.workspace = true
hmac.workspace = true
hex.workspace = true
base64ct.workspace = true
base64 = "0.22"
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
