[package]
name = "minion-finance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION Finance Intelligence - expense tracking, investments, planning"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
csv.workspace = true

minion-db = { path = "../minion-db" }
minion-ai = { path = "../minion-ai" }

[dev-dependencies]
tempfile.workspace = true
