[package]
name = "minion-fitness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION Fitness & Wellness - workout planning, habit tracking"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

minion-db = { path = "../minion-db" }
