[package]
name = "minion-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION LLM provider abstraction (Ollama, OpenAI-compatible, Anthropic, Gemini)"

[dependencies]
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
