[package]
name = "minion-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION Plugin SDK"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
semver.workspace = true
