[package]
name = "minion-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Retrieval-Augmented Generation primitives for MINION"

[dependencies]
minion-db = { path = "../minion-db" }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
rusqlite = "0.31"
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
