[package]
name = "minion-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION Book Reader - EPUB/PDF reading with AI features"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true

minion-db = { path = "../minion-db" }
minion-ai = { path = "../minion-ai" }

# EPUB parsing
epub = "2.1"
pdf-extract = "0.10.0"
html-escape = "0.2.13"
ammonia = "4"

[dev-dependencies]
tempfile.workspace = true
