[package]
name = "minion-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MINION Search Engine - full-text search"

[dependencies]
tokio.workspace = true
tantivy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
